--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,15 @@ environment:
 
 dependencies:
   args: ^2.0.0
+  equatable: ^2.0.3
+  firebase_dart: ^1.0.8
+  meta: ^1.8.0
+  postgres: ^2.4.3
   shelf: ^1.1.0
   shelf_router: ^1.0.0
+  validators: ^3.0.0
 
 dev_dependencies:
   http: ^0.13.0
-  lints: ^2.0.0
+  lint: ^1.8.2
   test: ^1.15.0
