--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   validators: ^3.0.0
 
 dev_dependencies:
+  build_runner: ^2.1.11
+  build_web_compilers: ^3.2.3
   http: ^0.13.0
   lint: ^1.8.2
   test: ^1.15.0
