--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   args: ^2.3.1
   equatable: ^2.0.3
+  faker: ^2.0.0
   firebase_dart: ^1.0.9
   meta: ^1.8.0
   postgres: ^2.4.4
