--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,21 @@ dependencies:
   args: ^2.3.1
   collection: ^1.16.0
   dart_jsonwebtoken: ^2.4.1
+  envify: ^2.0.2
   equatable: ^2.0.3
   faker: ^2.0.0
   firebase_dart: ^1.0.9
   meta: ^1.8.0
   postgres: ^2.4.4
+  redis: ^3.1.0
   shelf: ^1.3.0
   shelf_router: ^1.1.2
+  uuid: ^3.0.6
   validators: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.1.11
   build_web_compilers: ^3.2.3
+  envify_generator: ^2.0.2
   http: ^0.13.4
   lint: ^1.8.2
-  test: ^1.21.1
