--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   jose: ^0.3.2
   meta: ^1.8.0
   postgres: ^2.4.5
+  redis: ^3.1.0
   shelf: ^1.3.1
   shelf_router: ^1.1.3
   uuid: ^3.0.6
