--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,22 +10,22 @@ dependencies:
   args: ^2.3.1
   collection: ^1.16.0
   crypto: ^3.0.2
-  dart_jsonwebtoken: ^2.4.1
+  dart_jsonwebtoken: ^2.4.2
   envify: ^2.0.2
-  equatable: ^2.0.3
+  equatable: ^2.0.5
   faker: ^2.0.0
-  firebase_dart: ^1.0.9
+  firebase_dart: ^1.0.11
   jose: ^0.3.2
   meta: ^1.8.0
-  postgres: ^2.4.5
+  postgres: ^2.5.2
   redis: ^3.1.0
-  shelf: ^1.3.1
+  shelf: ^1.4.0
   shelf_router: ^1.1.3
   uuid: ^3.0.6
   validators: ^3.0.0
 
 dev_dependencies:
-  build_runner: ^2.1.11
+  build_runner: any
   envify_generator: ^2.0.2
-  http: ^0.13.4
-  lint: ^1.8.2
+  http: ^0.13.5
+  lint: ^2.0.1
