--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   collection: ^1.16.0
   crypto: ^3.0.2
   dart_jsonwebtoken: ^2.4.2
-  envify: ^2.0.2
+  envied: ^0.3.0
   equatable: ^2.0.5
   faker: ^2.0.0
   firebase_dart: ^1.0.11
@@ -26,6 +26,6 @@ dependencies:
 
 dev_dependencies:
   build_runner: any
-  envify_generator: ^2.0.2
+  envied_generator: ^0.3.0
   http: ^0.13.5
   lint: ^2.0.1
