--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: dart_restaurant_api
 description: A server app using the shelf package and Docker.
 version: 0.0.1
+publish_to: none
 # homepage: https://www.example.com
 
 environment:
@@ -15,10 +16,10 @@ dependencies:
   equatable: ^2.0.5
   faker: ^2.0.0
   firebase_dart: ^1.0.11
+  http: ^0.13.6
   jose: ^0.3.2
   meta: ^1.8.0
   postgres: ^2.5.2
-  redis: ^3.1.0
   shelf: ^1.4.0
   shelf_router: ^1.1.3
   uuid: ^3.0.6
@@ -27,5 +28,10 @@ dependencies:
 dev_dependencies:
   build_runner: any
   envied_generator: ^0.3.0
-  http: ^0.13.5
   lint: ^2.0.1
+
+dependency_overrides:
+  x509:
+    git:
+      url: https://github.com/kevmoo/x509.git
+      ref: updates
